Agregar método para leer un entero desde la entrada y mejorar la construcción de la URL en sendMessageAPI